@@ -1,3 +1,7 @@
+2002-02-05  Chris Demetriou  <cgd@broadcom.com>
+
+	* sim-main.h (SIGNEXTEND): Remove.
+
 2002-02-04  Chris Demetriou  <cgd@broadcom.com>
 
 	* mips.igen: Remove gencode comment from top of file, fix
